<resources>
    <string name="app_name">Weatherly</string>
    <string name="permForLoc">Need Location Access</string>
    <string name="messForLoc">Please allow location access</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="magnitude">Magnitude</string>
    <string name="location">Location</string>
    <string name="locationDialogBoxMessage">Turn ON Location?</string>
    <string name="refresh">Refresh</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="settings">Settings</string>
    <string name="sevenDayForecast">7 Day Weather Forecast</string>
    <string name="info">Info</string>
    <string name="PrivacyPolicyText">

        <![CDATA[

        <div id="privacy_content">
            <h2><a href="https://sites.google.com/view/weatherlybyhk/home" target="_blank">Privacy Policy</a></h2>
            <p>
                    Weatherly app was built as an Ad Supported app.
                    This SERVICE is provided at no cost and is intended for use as is.
            </p>
            <p>
                    This page is used to inform visitors regarding
                    my policies with the collection, use, and
                    disclosure of Personal Information if anyone decided to use
                    my Service.
            </p>
            <p>
                    If you choose to use my Service, then you agree
                    to the collection and use of information in relation to this
                    policy. The Personal Information that we collect is
                    used for providing and improving the Service.
                    we will not use or share your
                    information with anyone except as described in this Privacy
                    Policy.
            </p>
            <p>
                    The terms used in this Privacy Policy have the same meanings
                    as in our Terms and Conditions, which is accessible at
                    Weatherly unless otherwise defined in this Privacy
                    Policy.
            </p>
            <p><strong>Information Collection and Use</strong></p>
            <p>
                    For a better experience, while using our Service,
                    we may require you to provide us with certain
                    personally identifiable information, including but not limited to Location. The
                    information that we request will be
                    retained on your device and is not collected by me in any way.
            </p>
            <p>
                    The app does use third party services that may collect
                    information used to identify you.
            </p>
            <p>
                      Link to privacy policy of third party service providers
                      used by the app
            </p>
            <ul>
                <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
                <li><a href="https://darksky.net/privacy" target="_blank">Dark Sky</a></li>
                <li><a href="https://www.google.com/policies/privacy/" target="_blank">AdMob</a></li>
            </ul>
            <p><strong>Log Data</strong></p>
            <p>
                    We want to inform you that whenever
                    you use my Service, in a case of an error in the
                    app we collect data and information (through third
                    party products) on your phone called Log Data. This Log Data
                    may include information such as your device Internet
                    Protocol (“IP”) address, device name, operating system
                    version, the configuration of the app when utilizing
                    my Service, the time and date of your use of the
                    Service, and other statistics.
            </p>
            <p><strong>Cookies</strong></p>
            <p>
                    Cookies are files with a small amount of data that are
                    commonly used as anonymous unique identifiers. These are
                    sent to your browser from the websites that you visit and
                    are stored on your device\'s internal memory.
            </p>
            <p>
                    This Service does not use these “cookies” explicitly.
                    However, the app may use third party code and libraries that
                    use “cookies” to collect information and improve their
                    services. You have the option to either accept or refuse
                    these cookies and know when a cookie is being sent to your
                    device. If you choose to refuse our cookies, you may not be
                    able to use some portions of this Service.
            </p>
            <p><strong>Service Providers</strong></p>
            <p>
                    Third-party companies and individuals may be employed in order to facilitate the service,
                    provide the service on our behalf, perform service-related actions,
                    or assist us in analysing how our service is used.
                    These parties may have access to the personal information collected by us.
                    However, they are not allowed to use your data for purposes other than performing tasks assigned to them.
            </p>

            <p><strong>Security</strong></p>
            <p>
                    We value your trust in providing us
                    your Personal Information, thus we are striving to use
                    commercially acceptable means of protecting it. But remember
                    that no method of transmission over the internet, or method
                    of electronic storage is 100% secure and reliable, and
                    we cannot guarantee its absolute security.
            </p>
            <p><strong>Location and Weather Data</strong></p>
            <p>
                When using this service, you are presented with the option to share your geographical location with us.
                This data is used solely to provide accurate weather forecast and is fully anonymous.
            </p>
            <p><strong>Links to Other Sites</strong></p>
            <p>
                    This Service may contain links to other sites. If you click
                    on a third-party link, you will be directed to that site.
                    Note that these external sites are not operated by
                    me. Therefore, we strongly advise you to
                    review the Privacy Policy of these websites.
                    We have no control over and assume no
                    responsibility for the content, privacy policies, or
                    practices of any third-party sites or services.
            </p>
            <p><strong>Children’s Privacy</strong></p>
            <p>
                    These Services do not address anyone under the age of 13.
                    We do not knowingly collect personally
                    identifiable information from children under 13. In the case
                    we discover that a child under 13 has provided
                    me with personal information,
                    we immediately delete this from our servers. If you
                    are a parent or guardian and you are aware that your child
                    has provided us with personal information, please contact
                    me so that we will be able to do
                    necessary actions.
            </p>
            <p><strong>Changes to This Privacy Policy</strong></p>
            <p>
                    We may update our Privacy Policy from
                    time to time. Thus, you are advised to review this page
                    periodically for any changes. We will
                    notify you of any changes by posting the new Privacy Policy
                    on this page. These changes are effective immediately after
                    they are posted on this page.
            </p>
            <p><strong>Contact Us</strong></p>
            <p>
                    If you have any questions or suggestions about
                    my Privacy Policy, do not hesitate to contact
                    me at dev.toolsbyhk@gmail.com.
            </p>
        </div>
        ]]>
    </string>
    <string name="stuff">Stuff you never read</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="termsAndConditions">Terms and Conditions</string>
    <string name="rate">Rate The App</string>
    <string name="feedback">Send Feedback</string>
    <string name="recommend">Recommend</string>
</resources>